--- a/templates/results.html
+++ b/templates/results.html
@@ -18,7 +18,7 @@
 
   <div class="table-users">
    <div class="header">Product Reviews</div>
-      <div style="text-align: center; color:red;">(This data can be used further for Sentiment analysis)</div>
+      <div style="text-align: center; color:red;">(Data can be extrated at large scale for Sentiment analysis of various products.)</div>
 <div style="text-align: right">
 <button onclick="goBack()">Go Back</button>
 </div>
