--- a/templates/index.html
+++ b/templates/index.html
@@ -9,10 +9,11 @@
 {% block body %}
 <div class="header">
   <h2>Search a Product</h2>
+  <h6 style="text-align: center; color:brown;">[ Source: Flipkart ]</h6>
 </div>
 
+<h6 style="text-align: center; color:brown;">[ TechStack: Backend-Python,BS4 ; WebFramework-Flask ; Deployment-Heroku ]</h6>
 <div class="content">
-    <h6 style="text-align: center; color:brown;">( Source: Flipkart )</h6>
     <div class="form">
         <form action="/review" method="POST">
             <input type="text" name="content" id="content">
